--- a/fog/lib/css/partials/_theme.scss
+++ b/fog/lib/css/partials/_theme.scss
@@ -2,15 +2,16 @@ html, body{
     height:5800px !important;
 }
 
-//#position-log{
-//    position:fixed;
-//    top:20px;
-//    left:20px;
-//    background-color:rgba(0,0,0,0.5);
-//    color:white;
-//    padding:20px;
-//    z-index:9999;
-//}
+#position-log{
+    position:fixed;
+    top:20px;
+    left:20px;
+    background-color:rgba(0,0,0,0.5);
+    color:white;
+    padding:20px;
+    z-index:9999;
+    display:none;
+}
 
 .project-wrap{
     position:relative;
@@ -46,9 +47,9 @@ section {
 
 //center text and put it on top of landmark img
 .text{
-    margin-top:15%;
-    position:absolute;
-    z-index:500;
+    position:fixed;
+    top:15%;
+    z-index:9998;
     width:100%;
     text-align: center;
 }
@@ -65,7 +66,6 @@ section {
     bottom:0;
     left:0;
     width:100%;
-    z-index:400;
 }
 
 .slide h1{
@@ -75,11 +75,11 @@ section {
 }
 
 //make landmark images 100% wide
-#slide-1 img, #slide-2 img, #slide-3 img, #slide-4 img{
-    width:100%;
-    height:auto;
-    z-index:300;
-}
+//#slide-1 img, #slide-2 img, #slide-3 img, #slide-4 img{
+//    width:100%;
+//    height:auto;
+//    z-index:300;
+//}
 
 
 //Slide 0 - landing
@@ -99,6 +99,7 @@ section {
     margin-top:10%;
     font-size:48px;
     color:$grey;
+    z-index:8000;
 }
 
 //slide 1 - alamo square
@@ -107,6 +108,42 @@ section {
     height:100%;
     background:url(../images/fog.gif) no-repeat;
     @include bg-size(cover);
+}
+
+#slide-1 #alamo .landmark img{
+    width:100%;
+    height:auto;
+    position:fixed;
+    bottom:0;
+    left:0;
+    z-index:10;
+}
+
+#slide-1 #alamo-1{
+    width:18%;
+    height:auto;
+    position:fixed;
+    bottom:10px;
+    left:20%;
+    z-index:9;
+}
+
+#slide-1 #alamo-2{
+    width:18%;
+    height:auto;
+    position:fixed;
+    bottom:50px;
+    left:45%;
+    z-index:8;
+}
+
+#slide-1 #alamo-3{
+    width:18%;
+    height:auto;
+    position:fixed;
+    bottom:75px;
+    left:70%;
+    z-index:8;
 }
 
 #slide-1 .fog-1{
@@ -127,6 +164,10 @@ section {
     z-index:4;
 }
 
+#slide-1 .text{
+    z-index:9998;
+}
+
 
 //Slide 2 - embarcadero
 #slide-2 .bg-image{
@@ -134,7 +175,15 @@ section {
     height:100%;
     background:url(../images/fog.gif) no-repeat;
     @include bg-size(cover);
-    z-index:6;
+}
+
+#slide-2 #embarcadero .landmark img{
+    width:100%;
+    height:auto;
+    position:fixed;
+    bottom:0;
+    left:0;
+    z-index:30;
 }
 
 #slide-2 .item{
@@ -143,7 +192,11 @@ section {
     position:fixed;
     bottom:0;
     left:40%;
-    z-index:20;
+    z-index:50;
+}
+
+#slide-2 .text{
+    z-index:9997;
 }
 
 #slide-2 .fog-1{
@@ -170,8 +223,17 @@ section {
     height:100%;
     background:url(../images/fog.gif);
     @include bg-size(cover);
-    z-index:6;
 }
+
+#slide-3 #coit .landmark img{
+    width:100%;
+    height:auto;
+    position:fixed;
+    bottom:0;
+    left:0;
+    z-index:20;
+}
+
 
 #slide-3 .item{
     width:414px;
@@ -199,6 +261,9 @@ section {
     left:0;
     z-index:8;
 }
+#slide-3 .text{
+    z-index:9997;
+}
 
 //Slide 4
 #slide-4 .bg-image{
@@ -206,18 +271,26 @@ section {
     height:100%;
     background:url(../images/fog.gif);
     @include bg-size(cover);
-    z-index:9;
 }
 
-
-#slide-4 .fog-1{
-    width:625px;
-    height:123px;
+#slide-4 #palace .landmark img{
+    width:100%;
+    height:auto;
     position:fixed;
-    top:4%;
-    right:0;
-    z-index:10;
+    bottom:0;
+    left:0;
+    z-index:2;
 }
+
+#slide-4 .item{
+    width:130%;
+    height:auto;
+    position:fixed;
+    bottom:23px;
+    left:-100px;
+    z-index:1;
+}
+
 
 #slide-4 .fog-2{
     width:658px;
@@ -228,6 +301,9 @@ section {
     z-index:11;
 }
 
+#slide-1 .text{
+    z-index:9996;
+}
 
 //Inner pages
 .innerpage .bg-image{
@@ -267,7 +343,7 @@ section {
 //media queries
 @media all and (max-width:654px){
 .text{
-    margin-top:40%;
+    margin-top:20%;
     margin-left:auto;
     margin-right:auto;
     left:0;
@@ -278,7 +354,7 @@ section {
 }    
     
 #slide-2 .item{
-    left:5%;
+    left:0;
 }
     
 #slide-3 .item{
@@ -287,11 +363,19 @@ section {
     height:471.6px;
 }
     
-#slide-1 img, #slide-4 img{
+#slide-1 #alamo .landmark img, #slide-4 #palace .landmark img{
     width:250%;
 }
+    
+#slide-1 #alamo-2, #slide-1 #alamo-3{
+    display:none;
+}
+    
+#slide-1 #alamo-1{
+    left:35%;
+}
 
-#slide-4 img{
+#slide-4 #palace .landmark img{
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
