--- a/fog/lib/css/style.css
+++ b/fog/lib/css/style.css
@@ -1605,6 +1605,16 @@ h1.logo a {
 html, body {
   height: 5800px !important; }
 
+#position-log {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 20px;
+  z-index: 9999;
+  display: none; }
+
 .project-wrap {
   position: relative;
   overflow: hidden; }
@@ -1631,9 +1641,9 @@ section {
   z-index: 9999; }
 
 .text {
-  margin-top: 15%;
-  position: absolute;
-  z-index: 500;
+  position: fixed;
+  top: 15%;
+  z-index: 9998;
   width: 100%;
   text-align: center; }
 
@@ -1647,18 +1657,12 @@ section {
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100%;
-  z-index: 400; }
+  width: 100%; }
 
 .slide h1 {
   font-size: 46px;
   color: #474747;
   text-transform: uppercase; }
-
-#slide-1 img, #slide-2 img, #slide-3 img, #slide-4 img {
-  width: 100%;
-  height: auto;
-  z-index: 300; }
 
 #home .bg {
   height: 100%;
@@ -1682,7 +1686,8 @@ section {
   position: absolute;
   margin-top: 10%;
   font-size: 48px;
-  color: #3a3a3a; }
+  color: #3a3a3a;
+  z-index: 8000; }
 
 #slide-1 .bg-image {
   width: 100%;
@@ -1697,6 +1702,38 @@ section {
   right: 0;
   bottom: 0;
   left: 0; }
+
+#slide-1 #alamo .landmark img {
+  width: 100%;
+  height: auto;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 10; }
+
+#slide-1 #alamo-1 {
+  width: 18%;
+  height: auto;
+  position: fixed;
+  bottom: 10px;
+  left: 20%;
+  z-index: 9; }
+
+#slide-1 #alamo-2 {
+  width: 18%;
+  height: auto;
+  position: fixed;
+  bottom: 50px;
+  left: 45%;
+  z-index: 8; }
+
+#slide-1 #alamo-3 {
+  width: 18%;
+  height: auto;
+  position: fixed;
+  bottom: 75px;
+  left: 70%;
+  z-index: 8; }
 
 #slide-1 .fog-1 {
   width: 625px;
@@ -1714,6 +1751,9 @@ section {
   left: 0;
   z-index: 4; }
 
+#slide-1 .text {
+  z-index: 9998; }
+
 #slide-2 .bg-image {
   width: 100%;
   height: 100%;
@@ -1726,8 +1766,15 @@ section {
   top: 0;
   right: 0;
   bottom: 0;
+  left: 0; }
+
+#slide-2 #embarcadero .landmark img {
+  width: 100%;
+  height: auto;
+  position: fixed;
+  bottom: 0;
   left: 0;
-  z-index: 6; }
+  z-index: 30; }
 
 #slide-2 .item {
   width: 831px;
@@ -1735,7 +1782,10 @@ section {
   position: fixed;
   bottom: 0;
   left: 40%;
-  z-index: 20; }
+  z-index: 50; }
+
+#slide-2 .text {
+  z-index: 9997; }
 
 #slide-2 .fog-1 {
   width: 625px;
@@ -1765,8 +1815,15 @@ section {
   top: 0;
   right: 0;
   bottom: 0;
+  left: 0; }
+
+#slide-3 #coit .landmark img {
+  width: 100%;
+  height: auto;
+  position: fixed;
+  bottom: 0;
   left: 0;
-  z-index: 6; }
+  z-index: 20; }
 
 #slide-3 .item {
   width: 414px;
@@ -1792,6 +1849,9 @@ section {
   left: 0;
   z-index: 8; }
 
+#slide-3 .text {
+  z-index: 9997; }
+
 #slide-4 .bg-image {
   width: 100%;
   height: 100%;
@@ -1804,16 +1864,23 @@ section {
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
-  z-index: 9; }
+  left: 0; }
 
-#slide-4 .fog-1 {
-  width: 625px;
-  height: 123px;
+#slide-4 #palace .landmark img {
+  width: 100%;
+  height: auto;
   position: fixed;
-  top: 4%;
-  right: 0;
-  z-index: 10; }
+  bottom: 0;
+  left: 0;
+  z-index: 2; }
+
+#slide-4 .item {
+  width: 130%;
+  height: auto;
+  position: fixed;
+  bottom: 23px;
+  left: -100px;
+  z-index: 1; }
 
 #slide-4 .fog-2 {
   width: 658px;
@@ -1822,6 +1889,9 @@ section {
   top: 55%;
   left: 0;
   z-index: 11; }
+
+#slide-1 .text {
+  z-index: 9996; }
 
 .innerpage .bg-image {
   width: 100%;
@@ -1854,7 +1924,7 @@ section {
 
 @media all and (max-width: 654px) {
   .text {
-    margin-top: 40%;
+    margin-top: 20%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -1863,17 +1933,23 @@ section {
       font-size: 2.5em; }
 
   #slide-2 .item {
-    left: 5%; }
+    left: 0; }
 
   #slide-3 .item {
     left: 25%;
     width: 372.6px;
     height: 471.6px; }
 
-  #slide-1 img, #slide-4 img {
+  #slide-1 #alamo .landmark img, #slide-4 #palace .landmark img {
     width: 250%; }
 
-  #slide-4 img {
+  #slide-1 #alamo-2, #slide-1 #alamo-3 {
+    display: none; }
+
+  #slide-1 #alamo-1 {
+    left: 35%; }
+
+  #slide-4 #palace .landmark img {
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
